# Stratyfy_coding_exercise

./: .gitignore  README.md  test_connection.py  test_env.py
.devcontainer/: devcontainer.json
app/: config.py  database.py  main.py  poc.ipynb  schemas.py  setup_db.py
app/models/: models.py
app/routes/: sundae_routes.py
app/utils/: dynamic_loader.py  loader.py
data/: sundaes.json
template/: exercise.py  pyproject.toml
template/api/: api.py  schema.py
template/streamlit/: database.py  home.py  utils.py
template/streamlit/pages/: 01_load_data.py  02_view_data.py  03_revenue_analysis_by_id.py  04_revenue_report.py
template/webapp/: database.py  models.py
template/webapp/data/: employees.json  sundaes.json
